
Fr Feb 2 09:53:48 CET 2007

	- Cleaned up va_list handling. Hopefully this now works on all archs.
	- Applied Magnus Hagander's patch to take away some compiler warnings.

Su Feb 11 16:09:31 CET 2007

	- Fixed multibyte handling as reported by <harada.toshi@oss.ntt.co.jp>.

Th Mar 15 08:27:53 CET 2007

	- Made some chars const as proposed by Stefan Huehner <stefan@huehner.org>.
	- Synced parser and keyword lists.
	- Copied two token parsing from backend parser to ecpg parser.
	- Also added a test case for this.

Thu, 29 Mar 2007 11:18:39 +0200

	- Added patch by Magnus Hagander <magnus@hagander.net> to use native
	  win32 threads.
	- Fixed regression tests to run threading tests.

Fri, 27 Apr 08:55:25 CEST 2007

	- Inlined two functions to get rid of va_list problems on some
	  architectures.

Thu, 10 May 09:42:42 CEST 2007

	- Synced parser and keyword list.
	- Renamed update test so it hopefully runs on Vista.
	
Sun, 20 May 2007 22:01:11 +0200

	- Do not try to find local timezone in DecodeDateTime() because the
	  result is not used anyway. This also fixes Vista's build problems.

Sun, 27 May 2007 13:14:39 +0200

	- Changed variable test to not run into infinite loops on backend
	  errors.

Mon, 11 Jun 2007 13:59:57 +0200

	- Fixed memory leak in descriptor code.
	- Made ecpg delete output file in case of an error.

Tue, 12 Jun 2007 09:46:03 +0200

	- Synced parser and keyword list.

Wed, 25 Jul 2007 15:34:54 +0200

	- Synced parser.

Tue, 14 Aug 2007 11:46:51 +0200

	- Finished major rewrite to use new protocol version.
	- Really prepare statements.
	- Added more regression tests.
	- Added auto-prepare mode.
	- Use '$n' for positional variables, '?' is still possible via ecpg
	  option.
	- Cleaned up the sources a little bit.

Wed, 22 Aug 2007 08:41:33 +0200

	- More cleaning up and removed some duplicates.

Wed, 29 Aug 2007 15:41:58 +0200

	- Fixed bug in Informix define handling.
	- Set ecpg library version to 6.0.
	- Set ecpg version to 4.4.